# wtf8tools

./: .gitignore  Makefile.am  README  README.md  configure.ac  wtf162wtf8.c  wtf322wtf8.c  wtf82wtf16.c  wtf82wtf32.c
lib/: verbose.c  verbose.h  wtf16.c  wtf16.h  wtf32.c  wtf32.h  wtf8.c  wtf8.h
